--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
 <h1>ジャンル一覧・追加</h1>
-
-  <%= form_with model: @genre do |f| %>
+  <%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
     <p>
     <%= f.label :ジャンル名 %>
     <%= f.text_field :name, placeholder: "ジャンル名"  %>
